k8s/tapdata/ingress-huawei-demo.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-tapdata
  namespace: tapdata
  annotations:
    kubernetes.io/elb.class: union
    kubernetes.io/elb.port: '80'
    kubernetes.io/elb.autocreate:
      '{
          "type":"public",
          "bandwidth_name":"cce-bandwidth-elb",
          "bandwidth_chargemode":"traffic",
          "bandwidth_size":5,
          "bandwidth_sharetype":"PER",
          "eip_type":"5_bgp"
        }'
    kubernetes.io/elb.tags: key1=value1,key2=value2
spec:
  rules:
    - host: ''
      http:
        paths:
          - path: '/'
            property:
              ingress.beta.kubernetes.io/url-match-mode: STARTS_WITH
            backend:
              service:
                name: tapdata-server-svr
                port:
                  number: 3030
            pathType: ImplementationSpecific
  ingressClassName: cce
